Perkin-UAT/force-app/main/default/objects/Contract_Information__c/Contract_Information__c.object-meta.xml
<CustomObject>
    <description>Custom object for DX SBE to house Health Benefit contracts associated with health plan Accounts</description>
    <label>Contract Information</label>
    <nameField>
        <displayFormat>Contract Info- {0}</displayFormat>
        <label>Contract Information Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contract Informations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>