Perkin-UAT/force-app/main/default/objects/Contract_Information__c/fields/Alias_List1_if_applicable__c.field-meta.xml
<CustomField>
    <fullName>Alias_List1_if_applicable__c</fullName>
    <label>Alias List1 (if applicable)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>