Perkin-UAT/force-app/main/default/objects/Contract_Information__c/fields/Amendment_Description2__c.field-meta.xml
<CustomField>
    <fullName>Amendment_Description2__c</fullName>
    <label>Amendment Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>