Perkin-UAT/force-app/main/default/objects/Contract_Information__c/fields/Amendment_to_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Amendment_to_Agreement__c</fullName>
    <label>Amendment to Agreement(y/n)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>