Perkin-UAT/force-app/main/default/objects/Contract_Information__c/fields/Do_Not_Call2__c.field-meta.xml
<CustomField>
    <fullName>Do_Not_Call2__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Do Not Call</label>
    <type>Checkbox</type>
</CustomField>