Perkin-UAT/force-app/main/default/objects/Contract_Information__c/fields/Email1__c.field-meta.xml
<CustomField>
    <fullName>Email1__c</fullName>
    <label>Email</label>
    <type>Email</type>
</CustomField>