Perkin-UAT/force-app/main/default/objects/Contract_Information__c/fields/Expiration_Note__c.field-meta.xml
<CustomField>
    <fullName>Expiration_Note__c</fullName>
    <label>Expiration Note</label>
    <length>255</length>
    <type>Text</type>
</CustomField>