Perkin-UAT/force-app/main/default/objects/Contract_Information__c/fields/First_Name1__c.field-meta.xml
<CustomField>
    <fullName>First_Name1__c</fullName>
    <label>First Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>