Perkin-UAT/force-app/main/default/objects/Contract_Information__c/fields/LastName1__c.field-meta.xml
<CustomField>
    <fullName>LastName1__c</fullName>
    <label>LastName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>