Perkin-UAT/force-app/main/default/objects/Contract_Information__c/fields/Menu_expansion_ready_y_n__c.field-meta.xml
<CustomField>
    <fullName>Menu_expansion_ready_y_n__c</fullName>
    <label>Menu expansion ready? (y/n)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>