Perkin-UAT/force-app/main/default/objects/Contract_Information__c/fields/Others_3__c.field-meta.xml
<CustomField>
    <fullName>Others_3__c</fullName>
    <label>Others 3</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>