Perkin-UAT/force-app/main/default/objects/Contract_Information__c/fields/Phone1__c.field-meta.xml
<CustomField>
    <fullName>Phone1__c</fullName>
    <label>Phone</label>
    <type>Phone</type>
</CustomField>