Perkin-UAT/force-app/main/default/objects/Contract_Information__c/fields/Phone2__c.field-meta.xml
<CustomField>
    <fullName>Phone2__c</fullName>
    <label>Phone</label>
    <type>Phone</type>
</CustomField>