Perkin-UAT/force-app/main/default/objects/Contract_Information__c/fields/Plans_Included_in_Contract__c.field-meta.xml
<CustomField>
    <fullName>Plans_Included_in_Contract__c</fullName>
    <label>Plans Included in Contract</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Indemnity</fullName>
            </value>
            <value>
                <fullName>PPO</fullName>
            </value>
            <value>
                <fullName>HMO</fullName>
            </value>
            <value>
                <fullName>POS</fullName>
            </value>
            <value>
                <fullName>Managed Medicaid</fullName>
            </value>
            <value>
                <fullName>EPO</fullName>
            </value>
            <value>
                <fullName>ACO</fullName>
            </value>
            <value>
                <fullName>Exchange</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>