Perkin-UAT/force-app/main/default/objects/Contract_Information__c/fields/Received_scan_of_fully_executed_contract__c.field-meta.xml
<CustomField>
    <fullName>Received_scan_of_fully_executed_contract__c</fullName>
    <label>Received scan of fully executed contract</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>