Perkin-UAT/force-app/main/default/objects/Contract_Information__c/fields/Recredentailing_note__c.field-meta.xml
<CustomField>
    <fullName>Recredentailing_note__c</fullName>
    <label>Recredentailing Note</label>
    <length>255</length>
    <type>Text</type>
</CustomField>