Perkin-UAT/force-app/main/default/objects/Contract_Information__c/fields/Recredentialing_Date__c.field-meta.xml
<CustomField>
    <fullName>Recredentialing_Date__c</fullName>
    <label>Recredentialing Date</label>
    <type>Date</type>
</CustomField>