Perkin-UAT/force-app/main/default/objects/Contract_Information__c/fields/Renewal_Note__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Note__c</fullName>
    <label>Renewal Note</label>
    <length>255</length>
    <type>Text</type>
</CustomField>