Perkin-UAT/force-app/main/default/objects/Contract_Information__c/fields/Reports_due__c.field-meta.xml
<CustomField>
    <fullName>Reports_due__c</fullName>
    <label>Reports due</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Quarterly</fullName>
            </value>
            <value>
                <fullName>Annually</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>