Perkin-UAT/force-app/main/default/objects/Contract_Information__c/fields/Sales_VP_Sign_Date__c.field-meta.xml
<CustomField>
    <fullName>Sales_VP_Sign_Date__c</fullName>
    <label>Sales VP Sign Date</label>
    <type>Date</type>
</CustomField>