Perkin-UAT/force-app/main/default/objects/Contract_Information__c/fields/Shipping_City2__c.field-meta.xml
<CustomField>
    <fullName>Shipping_City2__c</fullName>
    <label>Shipping City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>