Perkin-UAT/force-app/main/default/objects/Contract_Information__c/fields/Shipping_State_Province1__c.field-meta.xml
<CustomField>
    <fullName>Shipping_State_Province1__c</fullName>
    <label>Shipping State/Province</label>
    <length>255</length>
    <type>Text</type>
</CustomField>