Perkin-UAT/force-app/main/default/objects/Contract_Information__c/fields/Shipping_Zip_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Zip_Postal_Code__c</fullName>
    <label>Shipping Zip/Postal Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>