Perkin-UAT/force-app/main/default/objects/Contract_Information__c/fields/Type_of_Report_Required__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Report_Required__c</fullName>
    <label>Type of Report Required</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Volume</fullName>
            </value>
            <value>
                <fullName>Results</fullName>
            </value>
            <value>
                <fullName>Customer Svc Performance</fullName>
            </value>
            <value>
                <fullName>Quality</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>